<resources>
    <string name="app_name">Book Store App</string>
    <string name="editor_label">Add a Book</string>
    <string name="inventory">The inventory table contains: </string>
    <string name="books"> books</string>
    <string name="supplier_name">supplier name</string>

    <!-- menu item strings -->
    <string name="dummy_data">Insert Dummy Data</string>
    <string name="delete_all">Delete All Books</string>
    <string name="action_save">Save Book</string>
    <string name="action_delete">Delete Entry</string>

    <!-- editor item strings-->
    <string name="category_overview">Overview</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price (GBP)</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>

    <!-- Toast strings-->
    <string name="enter_book_name">Please enter name of book</string>
    <string name="enter_book_price">Please enter price of book in GBP</string>
    <string name="enter_book_quantity">Please enter quantity</string>
    <string name="enter_supplier_name">Please enter quantity</string>
    <string name="enter_supplier_phone">Please enter supplier phone number</string>
    <string name="entry_error">Error saving book</string>
    <string name="book_saved">Book saved with row id: </string>
</resources>